# django_4.2_tutorial

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
mysite/containers/: Dockerfile
mysite/containers/django/: Dockerfile
mysite/containers/nginx/conf.d/: default.conf
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
