[tool.poetry]
name = "django-4-2-tutorial"
version = "0.1.0"
description = ""
authors = ["dhythm <yuta.okada.20@gmail.com>"]
readme = "README.md"
packages = [{include = "django_4"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
